cambios agregamos un parrafo

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Sé escribir un hola mundo en html (Hola mundo btw)</title>
 </head>
 <body>
+    <p>
+        Holi
+    </p>
     <article>
         Hello World
     </article>
